--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body{
 
 header{
   padding:20px;
+  margin-bottom: 100px;
 }
 
 @keyframes titleAnimation{
@@ -60,7 +61,6 @@ main .contents li.show img{
 }
 
 
-
 .contents li:not(:first-of-type){
   margin-top: 200px;
 }
@@ -88,7 +88,7 @@ main .contents li.show img{
   flex-direction: column;
   align-items:flex-end;
   position: absolute;
-  top: -40px;
+  top: -60px;
 }
 
 .contents h2{
@@ -101,7 +101,7 @@ main .contents li.show img{
   letter-spacing:.05em;
   border-radius:5px;
   opacity:0;
-  transform:translateY(20px);
+  transform:translateY(-50px);
   transition: 0.8s .3s;    /*0.3s遅れて0.8sの移動が開始される。*/
 }
 
@@ -154,11 +154,6 @@ a{
   color:red;
 }
 
-#photo{
-  width:20px;
-  height:20px;
-  margin-bottom:-5px;
-}
 
 
 /*レスポンシブ*/
@@ -168,6 +163,7 @@ a{
     font-family: serif;
     background-color: #333333;
     color: #ffffff;
+    overflow-x: hidden;
    }
    
    *,*::before,*::after{
@@ -204,7 +200,7 @@ a{
   
   main{
     max-width: 480px;
-    width: 100%;
+    width:100%;
     margin: 50px auto;
   }
   
@@ -231,7 +227,7 @@ a{
   
   
   .contents li:not(:first-of-type){
-    margin-top: 100px;
+    margin-top: 150px;
   }
   
   .contents li:nth-of-type(odd) .contentsText{
@@ -257,7 +253,7 @@ a{
     flex-direction: column;
     align-items:flex-end;
     position: absolute;
-    top: -20px;
+    top: -30px;
   }
   
   .contents h2{
@@ -270,8 +266,8 @@ a{
     letter-spacing:.05em;
     border-radius:5px;
     opacity:0;
-    transform:translateY(10px);
-    transition: 0.8s .3s;    /*0.3s遅れて0.8sの移動が開始される。*/
+    transform:translateY(-50px);
+    transition: 1s .8s;    /*0.3s遅れて0.8sの移動が開始される。*/
   }
   
   .contents h3{
@@ -285,12 +281,13 @@ a{
     letter-spacing:.05em;
     opacity:0;
     transform:translateX(15px);
-    transition: 0.8s .2s;
+    transition: 0.5s .2s;
     
   }
   
   .contents p{
-    line-height:1.5;
+    max-height: 200px;
+    line-height:1.2;
     background-color: #555555;
     font-size:7px;
     max-width: 170px;
@@ -311,6 +308,7 @@ a{
   }
   
   footer{
+    margin-top: 100px;
     text-align: center;
     padding: 25px;
     background-color:rgb(15, 11, 11);
@@ -323,10 +321,5 @@ a{
     color:red;
   }
   
-  #photo{
-    width:20px;
-    height:20px;
-    margin-bottom:-5px;
-  }
 
 }
