--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,48 @@
-body{
- font-family: serif;
- background-color: #333333;
- color: #ffffff;
+body {
+  font-family: serif;
+  background-color: #333333;
+  color: #ffffff;
 }
 
-*,*::before,*::after{
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-header{
-  padding:20px;
+header {
+  padding: 20px;
   margin-bottom: 100px;
 }
 
-@keyframes titleAnimation{
-  0%{
-    letter-spacing:.5em;
-    opacity:0;
+@keyframes titleAnimation {
+  0% {
+    letter-spacing: 0.5em;
+    opacity: 0;
   }
 }
 
-header h1{
+header h1 {
   font-size: 70px;
   font-weight: bold;
   margin-bottom: 60px;
   white-space: nowrap;
   text-align: center;
-  animation:titleAnimation 1.5s;
+  animation: titleAnimation 1.5s;
 }
 
-header p{
-  opacity:0.6;
-  color:yellow;
+header p {
+  opacity: 0.6;
+  color: yellow;
 }
 
-main{
+main {
   max-width: 1000px;
   width: 100%;
   margin: 50px auto;
 }
 
-.contents li{
+.contents li {
   position: relative;
   /* opacity:0;
   transform:translateY(50px);
@@ -55,271 +57,258 @@ main{
 .contents li.show h2,
 .contents li.show h3,
 .contents li.show p,
-main .contents li.show img{
-  opacity:1;
-  transform:none;
+main .contents li.show img {
+  opacity: 1;
+  transform: none;
 }
 
-
-.contents li:not(:first-of-type){
+.contents li:not(:first-of-type) {
   margin-top: 200px;
 }
 
-.contents li:nth-of-type(odd) .contentsText{
-  right:0;
+.contents li:nth-of-type(odd) .contentsText {
+  right: 0;
 }
 
-.contents li:nth-of-type(even) .contentsText{
+.contents li:nth-of-type(even) .contentsText {
   align-items: flex-start;
 }
 
-.contents li:nth-of-type(odd) img{
+.contents li:nth-of-type(odd) img {
   transform: translate(-50px, 50px);
 }
-.contents li:nth-of-type(even) img{
+.contents li:nth-of-type(even) img {
   margin-left: auto;
   transform: translate(50px, 50px);
   /*右下から出てくるアニメーション*/
 }
 
-
-.contentsText{
+.contentsText {
   display: flex;
   flex-direction: column;
-  align-items:flex-end;
+  align-items: flex-end;
   position: absolute;
   top: -60px;
 }
 
-.contents h2{
+.contents h2 {
   font-size: 50px;
   font-weight: bold;
   white-space: nowrap;
-  background-color:rgba(20,20,20,.8);
+  background-color: rgba(20, 20, 20, 0.8);
   padding: 10px 20px;
-  line-height:1.0;
-  letter-spacing:.05em;
-  border-radius:5px;
-  opacity:0;
-  transform:translateY(-50px);
-  transition: 0.8s .3s;    /*0.3s遅れて0.8sの移動が開始される。*/
+  line-height: 1;
+  letter-spacing: 0.05em;
+  border-radius: 5px;
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: 0.8s 0.3s; /*0.3s遅れて0.8sの移動が開始される。*/
 }
 
-.contents h3{
+.contents h3 {
   font-size: 30px;
   font-weight: bold;
   white-space: nowrap;
-  background-color:rgba(253, 249, 23, 0.8);
-  color:red;
+  background-color: rgba(253, 249, 23, 0.8);
+  color: red;
   padding: 10px 30px;
-  line-height:1.4;
-  letter-spacing:.05em;
-  opacity:0;
-  transform:translateX(30px);
-  transition: 0.8s .2s;
-  
+  line-height: 1.4;
+  letter-spacing: 0.05em;
+  opacity: 0;
+  transform: translateX(30px);
+  transition: 0.8s 0.2s;
 }
 
-.contents p{
-  line-height:2.0;
+.contents p {
+  line-height: 2;
   background-color: #555555;
-  font-size:14px;
+  font-size: 14px;
   max-width: 340px;
   padding: 15px;
   margin-top: 20px;
   border-radius: 5px;
-  opacity:0;
-  transform:translateY(20px);
-  transition: 0.8s ;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: 0.8s;
 }
 
-.contents img{
+.contents img {
   width: 65%;
   display: block;
   border-radius: 5px;
-  opacity:0;
-  transition: 0.8s ;
+  opacity: 0;
+  transition: 0.8s;
 }
 
-footer{
+footer {
   text-align: center;
   padding: 50px;
-  background-color:rgb(15, 11, 11);
-  
-
+  background-color: rgb(15, 11, 11);
 }
 
-a{
+a {
   background-color: yellow;
-  color:red;
+  color: red;
 }
-
-
 
 /*レスポンシブ*/
 
-@media screen and (max-width: 480px) { 
-  body{
+@media screen and (max-width: 480px) {
+  body {
     font-family: serif;
     background-color: #333333;
     color: #ffffff;
     overflow-x: hidden;
-   }
-   
-   *,*::before,*::after{
-     box-sizing: border-box;
-   }
-   
-   header{
-     padding:20px;
-     width:100%;
-   }
-   
-   @keyframes titleAnimation{
-     0%{
-       letter-spacing:.5em;
-       opacity:0;
-     }
-   }
+  }
 
-  header h1{
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+
+  header {
+    padding: 20px;
+    width: 100%;
+  }
+
+  @keyframes titleAnimation {
+    0% {
+      letter-spacing: 0.5em;
+      opacity: 0;
+    }
+  }
+
+  header h1 {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
     white-space: nowrap;
     text-align: center;
-    animation:titleAnimation 1.5s;
+    animation: titleAnimation 1.5s;
   }
-  
-  header p{
-    opacity:0.6;
-    color:yellow;
+
+  header p {
+    opacity: 0.6;
+    color: yellow;
     font-size: 10px;
-    line-height:1.5;
+    line-height: 1.5;
   }
-  
-  main{
+
+  main {
     max-width: 480px;
-    width:100%;
+    width: 100%;
     margin: 50px auto;
   }
-  
-  .contents li{
+
+  .contents li {
     position: relative;
     /* opacity:0;
     transform:translateY(50px);
     transition: 0.8s; */
   }
-  
+
   /* .contents li.show{
     opacity:1;
     transform:none;
   } */
-  
+
   .contents li.show h2,
   .contents li.show h3,
   .contents li.show p,
-  main .contents li.show img{
-    opacity:1;
-    transform:none;
+  main .contents li.show img {
+    opacity: 1;
+    transform: none;
   }
-  
-  
-  
-  .contents li:not(:first-of-type){
+
+  .contents li:not(:first-of-type) {
     margin-top: 150px;
   }
-  
-  .contents li:nth-of-type(odd) .contentsText{
-    right:0;
+
+  .contents li:nth-of-type(odd) .contentsText {
+    right: 0;
   }
-  
-  .contents li:nth-of-type(even) .contentsText{
+
+  .contents li:nth-of-type(even) .contentsText {
     align-items: flex-start;
   }
-  
-  .contents li:nth-of-type(odd) img{
+
+  .contents li:nth-of-type(odd) img {
     transform: translate(-25px, 25px);
   }
-  .contents li:nth-of-type(even) img{
+  .contents li:nth-of-type(even) img {
     margin-left: auto;
     transform: translate(25px, 25px);
     /*右下から出てくるアニメーション*/
   }
-  
-  
-  .contentsText{
+
+  .contentsText {
     display: flex;
     flex-direction: column;
-    align-items:flex-end;
+    align-items: flex-end;
     position: absolute;
     top: -30px;
   }
-  
-  .contents h2{
+
+  .contents h2 {
     font-size: 20px;
     font-weight: bold;
     white-space: nowrap;
-    background-color:rgba(20,20,20,.8);
+    background-color: rgba(20, 20, 20, 0.8);
     padding: 5px 10px;
-    line-height:1.2;
-    letter-spacing:.05em;
-    border-radius:5px;
-    opacity:0;
-    transform:translateY(-50px);
-    transition: 1s .8s;    /*0.3s遅れて0.8sの移動が開始される。*/
+    line-height: 1.2;
+    letter-spacing: 0.05em;
+    border-radius: 5px;
+    opacity: 0;
+    transform: translateY(-50px);
+    transition: 1s 0.8s; /*0.3s遅れて0.8sの移動が開始される。*/
   }
-  
-  .contents h3{
+
+  .contents h3 {
     font-size: 10px;
     font-weight: bold;
     white-space: nowrap;
-    background-color:rgba(253, 249, 23, 0.8);
-    color:red;
+    background-color: rgba(253, 249, 23, 0.8);
+    color: red;
     padding: 5px 15px;
-    line-height:1.4;
-    letter-spacing:.05em;
-    opacity:0;
-    transform:translateX(15px);
-    transition: 0.5s .2s;
-    
+    line-height: 1.4;
+    letter-spacing: 0.05em;
+    opacity: 0;
+    transform: translateX(15px);
+    transition: 0.5s 0.2s;
   }
-  
-  .contents p{
+
+  .contents p {
     max-height: 250px;
-    line-height:1.2;
+    line-height: 1.2;
     background-color: #555555;
-    font-size:5px;
+    font-size: 8px;
     max-width: 150px;
-    padding:10px;
+    padding: 10px;
     margin-top: 15px;
     border-radius: 5px;
-    opacity:0;
-    transform:translateY(10px);
-    transition: 0.8s ;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: 0.8s;
   }
-  
-  .contents img{
+
+  .contents img {
     width: 70%;
     display: block;
     border-radius: 10px;
-    opacity:0;
-    transition: 0.8s ;
+    opacity: 0;
+    transition: 0.8s;
   }
-  
-  footer{
+
+  footer {
     margin-top: 100px;
     text-align: center;
     padding: 25px;
-    background-color:rgb(15, 11, 11);
-    
-  
+    background-color: rgb(15, 11, 11);
   }
-  
-  a{
-    background-color:yellow;
-    color:red;
-  }
-  
 
+  a {
+    background-color: yellow;
+    color: red;
+  }
 }
